# advanced-testing-techniques

./: .gitignore  README.adoc  pyproject.toml  report.html  tutorial.sqlite  tutorial.toml
advanced_testing_techniques/: quicksort.py
tests/: test_hypothesis_quicksort.py  test_quicksort.py  test_quicksort_bad.py
