[tool.poetry]
name = "advanced-testing-techniques"
version = "0.1.0"
description = "Code samples for the \"advanced testing techniques\" presentation"
authors = ["Frank Schmitt <frank@qwhon.de>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
doctest2 = "^0.1"
cosmic-ray = "^8.3.15"
hypothesis = "^6.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
